--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
-    "react-router-dom": "^6.26.2"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.2",
+    "universal-cookie": "^7.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
