--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
     "express": "^4.21.0",
     "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "stripe": "^17.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.7.4",
