--- a/server/.env.example
+++ b/server/.env.example
@@ -4,6 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://USER:PASSWORD@HOST:PORT/DATABASE?schema=public&connection_limit=1"
+DATABASE_URL="postgresql://USER:PASSWORD@HOST:PORT/DATABASE?sslmode=require"
 JSON_WEB_TOKEN_SECRET="JSON_WEB_TOKEN_SECRET"
 STRIPE_SECRET_KEY="STRIPE_SECRET_KEY"
